<resources>
    <string name="app_name">Stratego</string>
    <string name="pref_table_size">Rozmiar planszy</string>
    <string name="pref_play">Graj</string>
    <string name="pref_player1">Gracz 1</string>
    <string name="pref_player2">Gracz 2</string>
    <string name="game_currently">Teraz gra:\n%s</string>
    <string name="pref_aidepth">Limit głębokości AI</string>
    <string name="pref_defaultdepth">4</string>
    <string name="pref_greedy_toggle">Próg przejścia na zachłanny</string>
    <string name="pref_default_greedy_treshold">16</string>
</resources>
